--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/bootstrap.css">
+  <link rel="stylesheet" href="./assets/CSS/bootstrap.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/CSS/style.css">
   <title>Weather</title>
 </head>
 
@@ -25,7 +25,7 @@
     </div>
     <h1 class="temp" id="temp"></h1>
     <h2 class="city" id="name"></h2>
-   
+
     <div class="d-flex justify-content-between">
       <div>
         <div>
@@ -47,7 +47,7 @@
 
 <script>
   let cityname = document.getElementById("city");
- 
+
   let clickbtn = document.getElementById("btn")
 
   clickbtn.addEventListener("click", function () {
@@ -59,8 +59,8 @@
       })
       .then((res) => {
         console.log(res);
-      
-        document.getElementById("temp").innerHTML = `${res.main.temp }&#8451`;
+
+        document.getElementById("temp").innerHTML = `${res.main.temp}&#8451`;
         document.getElementById("name").innerHTML = res.name;
         document.getElementById("humidity").innerHTML = `${res.main.humidity}%`;
         document.getElementById("wind").innerHTML = `${res.wind.speed} kmph`;
