weather api complete

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
           <img src="https://www.svgrepo.com/show/26690/humidity.svg" alt="" width="100">
         </div>
         <p>humidity</p>
-        <span id="humidity">22%</span>
+        <span id="humidity"></span>
       </div>
       <div>
         <div>
           <img src="https://www.svgrepo.com/show/14493/wind.svg" alt="" width="100">
         </div>
         <p>wind</p>
-        <span id="wind">4.26 kmph</span>
+        <span id="wind"></span>
       </div>
     </div>
   </div>
